--- a/flask_app/templates/chat-lr.html
+++ b/flask_app/templates/chat-lr.html
@@ -20,24 +20,34 @@
 {% block content %}
 <div id="chat-log">
 </div>
-<form hx-on::after-request="if(event.detail.successful) this.reset()"
-      hx-post="/query-lightrag"
+
+<form hx-post="/query-lightrag"
       hx-target="#chat-log"
       hx-swap="beforeend"
-      hx-validate="true"
       id="query-form"
-      hx-trigger="keydown[key=='Enter'&&!shiftKey]:submit"
-      hx-on:keydown="(event.keyCode==13&&!event.shiftKey)?event.preventDefault():null"
->
-    <label for="query-text"></label>
-    <textarea id="query-text" name="query" placeholder="Enter your query here..."
-              onkeyup="this.setCustomValidity('')"
-              hx-on:htmx:validation:validate="if(this.value==''){
-            this.setCustomValidity('Please enter a query');
-            htmx.find('#query-form').reportValidity()
-          }"
-    ></textarea>
+      hx-on::after-request="this.reset()">
+    <input id="query-text" type="text" name="query" required>
+<!--    <button type="submit">Send</button>-->
 </form>
+
+<!--<form hx-on::after-request="if(event.detail.successful) this.reset()"-->
+<!--      hx-post="/query-lightrag"-->
+<!--      hx-target="#chat-log"-->
+<!--      hx-swap="beforeend"-->
+<!--      hx-validate="true"-->
+<!--      id="query-form"-->
+<!--      hx-trigger="keydown[key=='Enter'&&!shiftKey]:submit"-->
+<!--      hx-on:keydown="(event.keyCode==13&&!event.shiftKey)?event.preventDefault():null"-->
+<!--&gt;-->
+<!--    <label for="query-text"></label>-->
+<!--    <textarea id="query-text" name="query" placeholder="Enter your query here..."-->
+<!--              onkeyup="this.setCustomValidity('')"-->
+<!--              hx-on:htmx:validation:validate="if(this.value==''){-->
+<!--            this.setCustomValidity('Please enter a query');-->
+<!--            htmx.find('#query-form').reportValidity()-->
+<!--          }"-->
+<!--    ></textarea>-->
+<!--</form>-->
 
 
 <script>
